Changed "download model" endpoint and button to "save model" endpoint
Data and labels are saved as well. Nothing is sent to browser. The icon is changed to reflect this.
